SDL can load objects with independent materials using 'scene' command.

--- a/RayTracing_from_scratch/RayTracing_from_scratch.vcxproj.filters
+++ b/RayTracing_from_scratch/RayTracing_from_scratch.vcxproj.filters
@@ -249,7 +249,7 @@
       <Filter>headers</Filter>
     </ClInclude>
     <ClInclude Include="include\Shading\PhongMaterial.h">
-      <Filter>headers</Filter>
+      <Filter>headers\Shading\Material</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
