--- a/RayTracing_from_scratch/RayTracing_from_scratch.vcxproj.filters
+++ b/RayTracing_from_scratch/RayTracing_from_scratch.vcxproj.filters
@@ -108,7 +108,7 @@
     <ClCompile Include="source\Rendering\FrameManager.cpp">
       <Filter>source\Rendering</Filter>
     </ClCompile>
-    <ClCompile Include="source\Shading\RGBTexture.cpp">
+    <ClCompile Include="source\Shading\Textures\RGBTexture.cpp">
       <Filter>source\Shading</Filter>
     </ClCompile>
     <ClCompile Include="source\Shading\DiffuseMaterial.cpp">
@@ -153,6 +153,12 @@
     <ClCompile Include="source\Shading\PhongMaterial.cpp">
       <Filter>source</Filter>
     </ClCompile>
+    <ClCompile Include="source\Shading\Textures\TextureManager.cpp">
+      <Filter>source</Filter>
+    </ClCompile>
+    <ClCompile Include="source\Light\DirectionLight.cpp">
+      <Filter>source</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\RayTracing_from_scratch.h">
@@ -194,7 +200,7 @@
     <ClInclude Include="include\Rendering\FrameManager.h">
       <Filter>headers\Rendering</Filter>
     </ClInclude>
-    <ClInclude Include="include\Shading\RGBTexture.h">
+    <ClInclude Include="include\Shading\Textures\RGBTexture.h">
       <Filter>headers\Shading</Filter>
     </ClInclude>
     <ClInclude Include="include\Rendering\Utils\Spectrum.h">
@@ -250,6 +256,12 @@
     </ClInclude>
     <ClInclude Include="include\Shading\PhongMaterial.h">
       <Filter>headers\Shading\Material</Filter>
+    </ClInclude>
+    <ClInclude Include="include\Shading\Textures\TextureManager.h">
+      <Filter>headers</Filter>
+    </ClInclude>
+    <ClInclude Include="include\Light\DirectionLight.h">
+      <Filter>headers</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
